@@ -32,12 +32,13 @@ install_java() {
 start_server() {
     echo "🚀 Iniciando servidor Minecraft..."
     taskset -c 0-$(($(nproc)-1)) java \
-    -Xms1G -Xmx2G \
+    -Xms2G -Xmx2G \
     -XX:+UseG1GC \
     -XX:ParallelGCThreads=$(nproc) \
     -XX:ConcGCThreads=$(nproc) \
     -XX:ActiveProcessorCount=$(nproc) \
     -Dpaper.maxChunkThreads=$(nproc) \
+    -XX:+UseZGC \
     -jar "$SERVER_JAR" nogui
 }
 
